trying to solve overlapping div: didnt work

--- a/css/app.css
+++ b/css/app.css
@@ -289,6 +289,13 @@ body {
     order: 0;
     width: 100%;
   }
-
+  #footer {
+    width: 100vh;
+  }
 }
-350px - 488px
+@media only screen and (min-width: 350px)
+and (max-width: 488px){
+  .imHere {
+    padding: 0 5% 10% 5%;
+  }
+}
